--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/validator": "^13.12.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
